--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "firebase": "^5.0.0",
+    "firebase-tools": "^6.1.2",
     "material-ui": "^0.20.1",
     "mixpanel-browser": "^2.23.0",
     "react": "^16.4.1",
